grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.assertion,
          $.function_definition,
          $.function_declaration,
          $.enum,
          $.enum_struct,
          $.typedef,
          $.typeset,
          $.functag,
          $.funcenum,
          $.methodmap,
          $.struct,
          $.struct_declaration,
          $.global_variable_declaration,
          $.old_global_variable_declaration,
          $.hardcoded_symbol,
          $.alias_declaration,
          $.alias_assignment,
        ),
      ),

    // Preprocessor
    preproc_define: ($) =>
      seq(
        preprocessor("define"),
        field("name", $.identifier),
        field("value", $.preproc_arg),
      ),

    preproc_assert: ($) =>
      seq(preprocessor("assert"), field("condition", $.preproc_arg)),

    preproc_pragma: ($) => seq(preprocessor("pragma"), $.preproc_arg),

    preproc_error: ($) => seq(preprocessor("error"), $.preproc_arg),

    preproc_warning: ($) => seq(preprocessor("warning"), $.preproc_arg),

    // Hardcoded identifier
    // https://github.com/alliedmodders/sourcemod/blob/5c0ae11a4619e9cba93478683c7737253ea93ba6/plugins/include/handles.inc#L78
    function_definition: ($) =>
      choice(
        seq(
          field("visibility", optional($.visibility)),
          field("returnType", seq($.type, repeat($.dimension))),
          field("name", $.identifier),
          field("parameters", $.parameter_declarations),
          field("body", $.block),
        ),
        seq(
          field("visibility", optional($.visibility)),
          field("returnType", optional($.old_type)),
          field("name", $.identifier),
          field("parameters", $.parameter_declarations),
          field("body", $._statement),
        ),
      ),

    parameter_declarations: ($) =>
      seq(
        "(",
        commaSep(choice($.parameter_declaration, $.rest_parameter)),
        ")",
      ),

    global_variable_declaration: ($) =>
      seq(
        field("visibility", optional($.visibility)), // Handle MaxClient
        field("storage_class", optional($.variable_storage_class)),
        field("type", $.type),
        commaSep1($.variable_declaration),
        $._semicolon,
      ),

    variable_declaration: ($) =>
      seq(
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension)),
        optional(seq("=", field("initialValue", $._expression))),
      ),

    old_global_variable_declaration: ($) =>
      choice(
        seq(
          choice(
            seq(
              choice("new", "decl"),
              field("storage_class", optional($.variable_storage_class)),
            ),
            field("storage_class", $.variable_storage_class),
            seq(
              field("visibility", $.visibility),
              field("storage_class", optional($.variable_storage_class)),
            ),
          ),
          commaSep1($.old_variable_declaration),
          $._semicolon,
        ),
        seq(commaSep1($.old_variable_declaration), $._semicolon),
      ),

    old_variable_declaration_statement: ($) =>
      prec.left(
        seq(
          choice(
            seq(choice("new", "decl"), optional($.variable_storage_class)),
            $.variable_storage_class,
            seq($.visibility, optional($.variable_storage_class)),
          ),
          commaSep1($.old_variable_declaration),
          $._semicolon
        ),
      ),

    // Workaround for mandatory semicolon in for loops
    old_variable_declaration: ($) =>
      seq(
        field("type", optional($.old_type)),
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension)),
        field("initialValue", optional(seq("=", $._expression))),
      ),

    type: ($) => choice($.builtin_type, $.identifier, $.any_type),

    fixed_dimension: ($) =>
      seq(
        "[",
        $._expression,
        optional(field("packing", $.dimension_packing)),
        "]",
      ),

    builtin_type: ($) =>
      choice("void", "bool", "int", "int64", "float", "char"),

    // `void` appears in both styles: new `void Foo()` and old `void:Foo()`.
    block: ($) => seq("{", repeat($._statement), "}"),

    // Statements
    _statement: ($) =>
      choice(
        $.block,
        $.variable_declaration_statement,
        $.old_variable_declaration_statement,
        $.for_statement,
        $.while_statement,
        $.do_while_statement,
        $.break_statement,
        $.continue_statement,
        $.condition_statement,
        $.switch_statement,
        $.return_statement,
        $.delete_statement,
        $.expression_statement,
      ),

    while_statement: ($) =>
      choice(
        // Modern: while (cond) stmt
        seq(
          "while",
          "(",
          field("condition", $._expression),
          ")",
          field("body", $._statement),
        ),
        // Legacy Pawn: while !cond do stmt (SourceMod 1.7 and earlier).
        // Restricted to unary_expression to avoid conflicts with
        // parenthesized modern while and bare literals.
        seq(
          "while",
          field("condition", $.unary_expression),
          "do",
          field("body", $._statement),
        ),
      ),

    expression_statement: ($) =>
      prec.right(
        seq(choice($._expression, $.comma_expression), optional($._semicolon)),
      ),

    _semicolon: ($) => choice($._automatic_semicolon, $._manual_semicolon),

    // Expressions

    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.call_expression,
        $.array_indexed_access,
        $.packed_array_indexed_access,
        $.ternary_expression,
        $.field_access,
        $.scope_access,
        $.binary_expression,
        $.unary_expression,
        $.update_expression,
        $.sizeof_expression,
        $.view_as,
        $.old_type_cast,
        $.identifier,
        $._literal,
        $.parenthesized_expression,
        $.this,
        $.new_expression,
      ),

    // This is needed to resolve ambiguity between symbols and old type casts in case statements.
    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field(
            "left",
            choice(
              $.array_indexed_access,
              $.packed_array_indexed_access,
              $.view_as,
              $.field_access,
              $.scope_access,
              $.identifier,
              $.this,
            ),
          ),
          field(
            "operator",
            choice(
              "=",
              "+=",
              "-=",
              "*=",
              "/=",
              "|=",
              "&=",
              "^=",
              "~=",
              "<<=",
              ">>=",
              ">>>=",
              "%=",
            ),
          ),
          field("right", choice($._expression, $.dynamic_array)),
        ),
      ),

    array_indexed_access: ($) =>
      seq(
        field(
          "array",
          choice($.identifier, $.array_indexed_access, $.field_access),
        ),
        "[",
        field("index", $._expression),
        "]",
      ),

    // https://forums.alliedmods.net/showthread.php?t=90735
    packed_array_indexed_access: ($) =>
      prec(PREC.FIELD,
        seq(
          field("array",
            choice($.identifier, $.array_indexed_access, $.field_access),
          ),
          "{",
          field("index", $._expression),
          "}",
        ),
      ),

    parenthesized_expression: ($) =>
      seq(
        "(",
        field("expression", choice($._expression, $.comma_expression)),
        ")",
      ),

    binary_expression: ($) => binaryExpression($._expression),

    update_expression: ($) => {
      const argument = field("argument", $._expression);
      const operator = field("operator", choice("--", "++"));
      return prec.right(
        PREC.UNARY,
        choice(seq(operator, argument), seq(argument, operator)),
      );
    },

    view_as: ($) =>
      seq(
        "view_as",
        "<",
        field("type", $.type),
        ">",
        "(",
        field("value", $._expression),
        ")",
      ),

    int_literal: ($) => {
      const separator = "_";
      const hex = /[0-9a-fA-F]/;
      const octo = /[o0-7]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const octoDigits = seq(
        repeat1(octo),
        repeat(seq(separator, repeat1(octo))),
      );
      const decimalDigits = seq(
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal))),
      );
      return token(
        seq(
          choice(
            decimalDigits,
            seq("0b", decimalDigits),
            seq("0x", hexDigits),
            seq("0o", octoDigits),
          ),
          optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
        ),
      );
    },

    float_literal: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(digits, '.', optional(digits), optional(exponent)),
      );
    },

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(token.immediate(prec(1, /[^"\\]|\\\r?\n/)), $.escape_sequence),
        ),
        '"',
      ),

    // Packed string
    // https://forums.alliedmods.net/showthread.php?t=90735
    packed_string_literal: ($) => prec(PREC.UNARY + 1, seq("!", $.string_literal)),

    identifier: ($) => /[a-zA-Z_]\w*/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
