test/corpus/floats.txt
==============
float literals
==============

float foo = 0.1;
float foo = 1.;
float foo = 12.0;
float foo = 12.;
float foo = 1.0e1;
float foo = 1.0e12;
float foo = 1.0e-12;
float foo = 1.e-12;

---

(source_file
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
  (global_variable_declaration
    (type
      (builtin_type)
    )
    (variable_declaration
      (identifier)
      (float_literal)
    )
  )
)
