test/corpus/packed_array_indexed_access.txt
==============================
packed array indexed with packed strings
==============================

plugin_init() {
	new g_szStrings[NUM_STRINGS][MAX_STRING_SIZE];
	g_szStrings[iTest] = !"Packed strings";
    while((szUnpacked[i] = szPacked{i++})){}
}


---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_declarations)
    body: (block
      (old_variable_declaration_statement
        (old_variable_declaration
          name: (identifier)
          (fixed_dimension
            (identifier))
          (fixed_dimension
            (identifier))))
      (expression_statement
        (assignment_expression
          left: (array_indexed_access
            array: (identifier)
            index: (identifier))
          right: (packed_string_literal
            (string_literal))))
      (while_statement
        condition: (parenthesized_expression
          expression: (assignment_expression
            left: (array_indexed_access
              array: (identifier)
              index: (identifier))
            right: (packed_array_indexed_access
              array: (identifier)
              index: (update_expression
                argument: (identifier)))))
        body: (block))))
)

==============================
packed char dimension
==============================

new s[32 char];

---

(source_file
  (old_global_variable_declaration
    (old_variable_declaration
      name: (identifier)
      (fixed_dimension
        (int_literal))))
)
